# clion_nginx

./: CMakeLists.txt  README.md  ngx_auto_config.h  ngx_modules.c
core/: nginx.c
